# shopman-doorman

./: README.md  conftest.py  doorman_test_settings.py  doorman_test_urls.py  pyproject.toml
shopman/doorman/: __init__.py  adapter.py  admin.py  apps.py  backends.py  conf.py  context_processors.py  error_codes.py  exceptions.py  gates.py  middleware.py  senders.py  signals.py  urls.py  utils.py
shopman/doorman/adapters/: __init__.py  guestman.py  noop.py
shopman/doorman/api/: serializers.py  urls.py  views.py
shopman/doorman/contrib/admin_unfold/: __init__.py  admin.py  apps.py
shopman/doorman/management/commands/: auth_cleanup.py
shopman/doorman/migrations/: 0001_initial.py
shopman/doorman/models/: __init__.py  access_link.py  customer_user.py  device_trust.py  verification_code.py
shopman/doorman/protocols/: customer.py
shopman/doorman/services/: __init__.py  _user_bridge.py  access_link.py  device_trust.py  verification.py
shopman/doorman/templates/auth/: access_link_invalid.html  access_link_request.html  code_request.html  code_verify.html  email_access_link.html  email_access_link.txt  email_code.html  (+1 more)
shopman/doorman/tests/: conftest.py  test_access_link_email.py  test_adapter.py  test_backend.py  test_delivery_chain.py  test_device_trust.py  test_device_views.py  test_error_codes.py  test_exceptions.py  test_middleware.py  test_models.py  test_normalize_phone.py  test_security.py  test_senders.py  test_views.py
shopman/doorman/views/: __init__.py  access_link.py  access_link_request.py  devices.py  health.py  logout.py  verification_code.py
